# maimai-updater

./: .gitignore  README.md  __init__.py  build_go.sh  config.py  dev.py  flake.nix  go.mod  go.sum  pyproject.toml  reqiurements.txt
lib/: asnyc_sqlite.py  cmd.py  db.py  prober.py  qq_official.py  utils.py  wahlap.py  wbot.py
lib/pageparser_go/: pageparser.go
maimai-pageparser/: build.sh  go.mod  go.sum  pageparser.go
migrations/: 11a9a1a94259_add_sec_id.py  2dcb2f7d88f6_add_stat.py  5b05bdfe535e_.py  ad582aba56b2_migrate_db.py  c163ff4e5f5e_init_db.py
nix/: gopy.nix  gopy.patch  pageparser.nix
nonebot_plugin_maimai_updater/: __init__.py  config.py
nonebot_plugin_maimai_updater/lib/: cmd.py  db.py  lxns.py  prober.py  qq_official.py  searched_friend_parser.py  statistics.py  utils.py  wahlap.py  wbot.py  wechat.py
nonebot_plugin_maimai_updater/migrations/: b5a52b0fbe82_support_lxns_prober.py  d095f6139db5_init_db.py  da3b3de13229_new_bind_logic.py
